--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,8 +14,9 @@ phases:
        - echo Build completed on `date`
        - echo Pushing the Docker image...
        - docker push $ECR_URI:$IMAGE_TAG
-       - printf '{"ImageURI":"%s"}' $ECR_URI:$IMAGE_TAG > imageDetail.json
+       - printf '[{"name":"solana","imageUri":"%s"}]' $ECR_URI:$IMAGE_TAG > imageDefinitions.json 
+       - cat imageDefinitions.json
 artifacts:
      files:
-       - imageDetail.json
+       - imageDefinitions.json
        - appspec.yaml
