--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,6 +3,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - aws --version
+      - docker --version
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_URI
 
