--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,28 +1,29 @@
-
 version: 0.2
+
 phases:
   pre_build:
     commands:
       - aws --version
       - docker --version
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-1 | docker login --username
-        AWS --password-stdin $ECR_URI
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_URI
+
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t utkarsh:$IMAGE_TAG .
-      - docker tag utkarsh:$IMAGE_TAG $ECR_URI:$IMAGE_TAG
+      - docker build -t $ECR_URI:$IMAGE_TAG .
+      - docker tag $ECR_URI:$IMAGE_TAG $ECR_URI:$IMAGE_TAG
+
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $ECR_URI:$IMAGE_TAG
       - echo Creating image definitions JSON file...
-      - printf '[{"name":"cloudologic","imageUri":"%s"}]' "$ECR_URI:$IMAGE_TAG"
-        > imageDefinitions.json
+      - echo '[{"name":"cloudologic","imageUri":"'$ECR_URI:$IMAGE_TAG'"}]' > imageDefinitions.json
       - cat imageDefinitions.json
+
 artifacts:
   files:
     - imageDefinitions.json
