--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,6 +2,8 @@ version: 0.2
 phases:
   pre_build:
      commands:
+       # - echo Logging in to DockerHub...
+       # - echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
        - echo Logging in to Amazon ECR...
        - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_URI
   build:
@@ -19,4 +21,5 @@ phases:
 artifacts:
      files:
        - imageDefinitions.json
-       - appspec.yaml
+       - appspec.yml
+      
