--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_TAG: "latest"                # Default image tag
+    IMAGE_TAG: "utkarsh"
     ECR_URI: "211125410654.dkr.ecr.us-east-1.amazonaws.com/sahil"
 
 phases:
@@ -15,6 +15,8 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
+      - echo "Listing current directory contents:"
+      - ls -la                        # Check if Dockerfile exists
       - echo "Building the Docker image..."
       - docker build -t $ECR_URI:$IMAGE_TAG .
       - echo "Docker build completed."
